--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
                     <h1 id="userNameDisplay">MarcShop</h1>
                 </div>
                 <div class="search-bar">
-                    <i class="fas fa-search"></i>
-                    <input type="text" placeholder="Rechercher des produits...">
+                    <i class="fas fa-search" id="searchIcon"></i>
+                    <input type="text" id="searchInput" placeholder="Rechercher des produits...">
+                    <i class="fas fa-times clear-search" id="clearSearch" style="display: none; cursor: pointer;"></i>
                 </div>
                 <div class="header-actions">
                     <button class="share-btn" id="shareBtn">
