--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
         <span class="arrow prev">&#10094;</span>
         <span class="arrow next">&#10095;</span>
         <img class="lightbox-content" id="lightboxImage">
+        <div id="lightboxDescription" class="lightbox-description"></div>
     </div>
 
     <!-- PayPal SDK -->
