--- a/index.html
+++ b/index.html
@@ -92,10 +92,12 @@
         <div class="container">
             <div class="categories">
                 <button class="category-btn active" data-category="all">Tous</button>
-                <button class="category-btn" data-category="electronics">Électronique</button>
                 <button class="category-btn" data-category="clothing">Vêtements</button>
+                <button class="category-btn" data-category="shoes">Chaussures</button>
+                <button class="category-btn" data-category="electronics">Électronique</button>
                 <button class="category-btn" data-category="home">Maison</button>
                 <button class="category-btn" data-category="sports">Sports</button>
+                <button class="category-btn" data-category="beauty">Beauté</button>
             </div>
         </div>
     </nav>
