--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
                 <button class="category-btn" data-category="home">Maison</button>
                 <button class="category-btn" data-category="sports">Sports</button>
                 <button class="category-btn" data-category="beauty">Beauté</button>
-                <button class="category-btn" data-category="hair">Cheveux & Perruques</button>
             </div>
         </div>
     </nav>
@@ -138,9 +137,9 @@
     
     <!-- Lightbox pour les images de produits -->
     <div id="productLightbox" class="lightbox">
-        <span class="close" onclick="closeLightbox()">&times;</span>
-        <span class="arrow prev" onclick="changeImage(-1)">&#10094;</span>
-        <span class="arrow next" onclick="changeImage(1)">&#10095;</span>
+        <span class="close">&times;</span>
+        <span class="arrow prev">&#10094;</span>
+        <span class="arrow next">&#10095;</span>
         <img class="lightbox-content" id="lightboxImage">
         <div id="lightboxDescription" class="lightbox-description"></div>
     </div>
